fix z-index on actions dropdown

--- a/src/components/account/UserWallet.scss
+++ b/src/components/account/UserWallet.scss
@@ -88,7 +88,7 @@
       max-width: 100%;
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
       padding: 12px 16px;
-      z-index: 1;
+      z-index: 3;
       button {
         background-color: transparent;
         color: $primary;
